fix: reformat menu on small screen devices

--- a/static/style.css
+++ b/static/style.css
@@ -200,6 +200,17 @@ nav.main ul li {
   padding-right: 1em;
 }
 
+@media only screen and (max-width: 700px) {
+  nav.main ul {
+    flex-direction: column;
+  }
+
+  nav.main ul li {
+    margin-bottom: .5em;
+    padding-right: 0;
+  }
+}
+
 nav.main ul li:last-child {
   margin-right: 0;
   padding-right: 0;
